--- a/src/main/resources/static/base/base.css
+++ b/src/main/resources/static/base/base.css
@@ -8,6 +8,8 @@
 }
 body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+	margin: 0;
+	padding: 0;
 }
 
 [data-theme='dark'] {
@@ -15,6 +17,10 @@ body {
 	--background-hover-color: rgba(255, 255, 255, 0.125);
 	--text-color: rgb(201, 209, 217);
 	--border-color: rgb(48, 54, 61);
+	--emphasis-color: rgb(219, 185, 188);
+	--actress-favorite-color: yellowgreen;
+	--input-label-color: rgb(201, 209, 217);
+	--input-label-checked-color: rgb(219, 185, 188);
 }
 
 [data-theme='light'] {
@@ -22,4 +28,113 @@ body {
 	--background-hover-color: rgba(0, 0, 0, 0.125);
 	--text-color: rgb(0, 0, 0);
 	--border-color: rgb(233, 233, 233);
+	--emphasis-color: rgb(201, 48, 61);
+	--actress-favorite-color: mediumblue;
+	--input-label-color: rgb(0, 0, 0);
+	--input-label-checked-color: rgb(201, 48, 61);
+}
+
+:root {
+	--color-red: #f00;
+}
+
+.favorite {
+	color: var(--color-red);
+}
+
+label:empty,
+span:empty {
+	display: none;
+}
+
+label > input {
+	position: absolute;
+	overflow: hidden;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	border: 0;
+	clip: rect(0, 0, 0, 0);
+}
+label > input ~ span {
+	cursor: pointer;
+	color: var(--input-label-color);
+}
+label > input:checked ~ span {
+	color: var(--input-label-checked-color);
+}
+
+.rank-choice {
+	margin: 0 !important;
+	padding: 0 !important;
+}
+.rank-choice > label {
+	border-radius: 0 !important;
+	margin: 0 !important;
+	padding: 0.25rem 0.5rem !important;
+}
+.rank-choice > label:first-child {
+	border-top-left-radius: 0.5rem !important;
+	border-bottom-left-radius: 0.5rem !important;
+	padding-left: 0.75rem !important;
+}
+.rank-choice > label:last-child {
+	border-top-right-radius: 0.5rem !important;
+	border-bottom-right-radius: 0.5rem !important;
+	padding-right: 0.75rem !important;
+}
+.rank-choice > label > input {
+	position: absolute !important;
+	overflow: hidden !important;
+	width: 1px !important;
+	height: 1px !important;
+	padding: 0 !important;
+	margin: -1px !important;
+	border: 0 !important;
+	clip: rect(0, 0, 0, 0) !important;
+}
+.rank-choice > label > input ~ i {
+	cursor: pointer !important;
+	transition: color 0.4s !important;
+}
+.rank-choice > label:hover > input ~ i {
+	color: orange !important;
+}
+.rank-choice > label > input[value='-1']:checked ~ i {
+	color: rgba(0, 0, 255, 0.5) !important;
+}
+.rank-choice > label > input[value='0']:checked ~ i {
+	color: rgba(255, 255, 0, 0.5) !important;
+}
+.rank-choice > label > input[value='1']:checked ~ i {
+	color: rgba(255, 0, 0, 0.5) !important;
+}
+.rank-choice > label > input[value='2']:checked ~ i {
+	color: rgba(255, 0, 0, 0.6) !important;
+}
+.rank-choice > label > input[value='3']:checked ~ i {
+	color: rgba(255, 0, 0, 0.7) !important;
+}
+.rank-choice > label > input[value='4']:checked ~ i {
+	color: rgba(255, 0, 0, 0.8) !important;
+}
+.rank-choice > label > input[value='5']:checked ~ i {
+	color: rgba(255, 0, 0, 0.9) !important;
+}
+
+a[href] {
+	color: var(--text-color);
+	text-decoration: none;
+}
+
+.lead {
+	font-size: 1.25rem;
+	font-weight: 300;
+}
+
+.small,
+small {
+	font-size: 80%;
+	font-weight: 400;
 }
